@@ -1,9 +1,9 @@
 #!/bin/sh
 
-# Copyright (C) 2022 by Jim Klimov <jimklimov+nut@gmail.com>
+# Copyright (C) 2022-2023 by Jim Klimov <jimklimov+nut@gmail.com>
 # Licensed same as NUT
 #
-# Helper automating the nuances from NUT::scripts/Windows/README
+# Helper automating the nuances from NUT::scripts/Windows/README.adoc
 # to provide prerequisites needed in semi-native or cross-builds.
 #
 # NOTE: Currently constrained to providing net-snmp under MSYS2.
